--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -43,10 +45,26 @@
       </div>
     </div>
   </header>
+  <section class="top">
+    <div class="container">
+      <div class="top__inner">
+        <h1 class="top__title title">
+          The Design Thinking superpowers
+        </h1>
+        <p class="top__tex">
+          Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next
+          user experience.
+        </p>
+        <button class="top__btn">Get started</button>
+        <a class="top__link" href="#">Watch the Video</a>
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
