--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="slider__item">
           <img src="images/blog-1.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Increasing Prosperity With Positive Thinking
@@ -247,7 +247,7 @@
         <div class="slider__item">
           <img src="images/blog-2.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Motivation Is The First Step To Success
@@ -256,7 +256,7 @@
         <div class="slider__item">
           <img src="images/blog-3.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Success Steps For Your Personal Or Business Life
@@ -265,7 +265,7 @@
         <div class="slider__item">
           <img src="images/blog-1.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Increasing Prosperity With Positive Thinking
@@ -274,7 +274,7 @@
         <div class="slider__item">
           <img src="images/blog-2.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Motivation Is The First Step To Success
@@ -283,7 +283,7 @@
         <div class="slider__item">
           <img src="images/blog-3.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Success Steps For Your Personal Or Business Life
@@ -292,7 +292,7 @@
         <div class="slider__item">
           <img src="images/blog-1.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Increasing Prosperity With Positive Thinking
@@ -301,7 +301,7 @@
         <div class="slider__item">
           <img src="images/blog-2.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Motivation Is The First Step To Success
@@ -310,7 +310,7 @@
         <div class="slider__item">
           <img src="images/blog-3.jpg" alt="" class="slider__item-img">
           <div class="slider__item-info">
-            By <a class="slider__item-author" href="#">Abdullah</a> |  03 March 2022
+            By <a class="slider__item-author" href="#">Abdullah</a> | 03 March 2022
           </div>
           <a class="slider__item-title title" href="#">
             Success Steps For Your Personal Or Business Life
@@ -319,6 +319,72 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <a href="#" class="logo">
+          <img class="logo__img" src="images/logo.png" alt="">
+        </a>
+        <div class="footer__menu">
+          <h6 class="footer__menu-title">Quick Links</h6>
+          <ul class="footer__list">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                About Us
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Blog
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Contact
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                FAQ
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__menu">
+          <h6 class="footer__menu-title">Legal Stuff</h6>
+          <ul class="footer__list">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Disclaimer
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Financing
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Privacy Policy
+              </a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">
+                Terms of Service
+              </a>
+            </li>
+          </ul>
+        </div>
+        <form action="#" class="footer__form">
+          <p class="footer__form-text">
+            knowing you're always on the best energy deal.
+          </p>
+          <input class="footer__form-input" type="text" placeholder="Enter your phone">
+          <button class="footer__form-btn" type="submit">Sign up Now</button>
+        </form>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
