--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -23,6 +24,9 @@
           <img class="logo__img" src="images/logo.png" alt="">
         </a>
         <nav class="menu">
+          <div class="menu__btn">
+            <span></span>
+          </div>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a href="#" class="menu__list-link">Product</a>
